# twitterclone-assessment

./: .gitignore  README.md  pyproject.toml
authentication/: views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200907_2152.py  0003_auto_20200908_0020.py
templates/: index.html  login.html  notification.html  tweet_detail.html  user_detail.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweetauthormodel_user.py  0002_tweetmodel_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20200903_1847.py  0002_twitteruser_following.py
