[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "Is a faux version of twitter."
authors = ["Michael DeMory <mjdemory2891@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
